--- a/app/templates/fancoolindex.html
+++ b/app/templates/fancoolindex.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/fancool.css', v=11) }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/chart-renderer.css', v=1) }}">
   <!-- bumped v to 4 to refresh new styles (fc-subrow__scenario-extra) -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/right-card.css', v=7) }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/right-panel.css', v=7) }}">
 </head>
 <body class="bg-gray-50 min-h-screen">
   <div id="announcementBar" class="fc-announce hidden">
